# rdflib-serializer

./: .gitignore  Readme.md  pyproject.toml
rdflib_serializer/: cli.py
